# RC-IRSTD

./: .gitignore  02_RC-IRSTD_方案_代码_步骤.md  RC-IRSTD_AAAI-27投稿评审与修改建议.md  RC-IRSTD_AAAI27_RC4风险梯度证据修正与重跑决定.md  RC-IRSTD_AAAI27_RC5_完整模型设计与冻结门_20260717.md  RC-IRSTD_AAAI27_RC5plus_预算条件化单调曲线候选设计_20260718.md  RC-IRSTD_AAAI27_下一步训练方案与_GO_NO_GO_决策.md  RC-IRSTD_AAAI27_完整模型设计冻结与实验执行计划_20260717.md  RC-IRSTD_AAAI27_当前状态与下一步训练执行方案.md  RC-IRSTD_AAAI27_预注册实验矩阵与结果表模板_20260717.md  README.md  baseline_results.md  main.py  pyproject.toml  requirements.txt
configs/: aaai27_analysis_plan.json  aaai27_calibrator_risk_aligned.json  aaai27_calibrator_risk_aligned.yaml  aaai27_detector_tail_sep.json  aaai27_detector_tail_sep.yaml  aaai27_near_duplicate_quarantine.json  aaai27_pilot_matrix.yaml  aaai27_stage1_pilot_matrix.json  aaai27_stage2_crossfit_rc5_v3.json  aaai27_stage2_crossfit_rc5plus_v1.json  aaai27_stage2_crossfit_v2.json  budgets_aaai27.txt  datasets.example.yaml  lodo_example.yaml  lodo_fold.example.yaml  lodo_smoke.yaml  lodo_temporal_example.yaml
data_ext/: __init__.py  balanced_domain_loader.py  dataset_identity.py  dataset_meta.py  development_split_contract.py  eval_dataset.py  inference_dataset.py  label_manifest_artifacts.py  mask_alignment.py  multi_source_dataset.py  score_manifest_artifacts.py  split_utils.py  stage2_detector_run_complete_v2.py  stage2_label_attachment.py  stage2_rc5_atomic_decision_set.py  stage2_rc5_score_bundle_v2.py  stage2_rc5_source_exact_curve_bank_v1.py  stage2_rc5plus_atomic_full_decision_set.py  stage2_rc5plus_atomic_learned_decision_set.py  stage2_role_contract.py  stage2_score_manifest.py  stage2_score_manifest_metadata_v5.py  stage2_threshold_decision.py  stage2_variable_query_window.py
docs/: AAAI27_FOURTH_DOMAIN_ADMISSION.md  AAAI27_RC1_SLS_IMPLEMENTATION_INVALID.md  AAAI27_STATISTICAL_ANALYSIS_PLAN.md  AAAI27_TWO_STAGE_NO_REJECT_FINAL_PLAN.md  AAAI27_TWO_STAGE_NO_REJECT_IMPLEMENTATION.md  CODE_AUDIT_AND_IMPLEMENTATION.md  EXPERIMENT_PROTOCOL.md  PACKAGE_CONTENTS.md  TRAINING_RUNBOOK.md  TRAINING_STATUS.md
evaluation/: __init__.py  budget_metrics.py  calibrator_replay.py  component_matching.py  evaluate_adapter_output.py  export_label_maps.py  export_score_maps.py  export_stage2_development_scores.py  export_stage2_development_scores_run_complete_v2.py  export_stage2_labels.py  export_stage2_rc5_score_bundle_v2.py  operating_point.py  stage1_gate_diagnostics.py  stage2_crossed_bootstrap_v3.py  stage2_crossfit_replay.py  stage2_paired_bootstrap.py  stage2_rc5_estimability.py  stage2_source_threshold_pool.py  stage2_threshold_family.py  stage2_threshold_sweep.py  threshold_sweep.py
losses/: __init__.py  calibrator_risk.py  hard_target_loss.py  local_peak_cvar.py  schedules.py  sls.py  smooth_worst_domain.py  target_background_margin.py
model/: MSHNet.py  budget_conditioned_endpoint_calibrator.py  budget_conditioned_residual_transport_calibrator.py  direct_no_reject_pixel_calibrator.py  endpoint_aware_pixel_calibrator.py  endpoint_aware_pixel_calibrator_ablation.py  endpoint_aware_threshold.py  monotone_pixel_calibrator.py  threshold_calibrator.py
paper/: README.md
rc/: __init__.py  build_meta_episodes.py  build_source_reference.py  build_stage2_crossfit_episodes.py  build_stage2_rc5_context.py  build_stage2_source_reference.py  domain_statistics.py  meta_dataset.py  online_adapter.py  oracle_threshold.py  schema.py  stage2_calibrator_checkpoint_v7.py  stage2_calibrator_checkpoint_v8.py  (+35 more)
(+267 files in other folders)
